opt/konveyor/descriptors/konveyor-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: konveyor-tackle
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: http-ingress
    namespace: konveyor-tackle
spec:
    rules:
    - host: "KONVEYOR_HOST"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: tackle-ui
                port:
                    number: 8080
